fixed some spacing stuff

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -11,6 +11,7 @@ body {
     background-repeat: no-repeat;
     position: relative;
     margin: 0;
+    margin-top: 10vh;
     padding: 0;
     min-height: 100vh;
 }
